--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -21,7 +21,7 @@
       <div class="col-md-5">
         <div class="row">
             <div class="col-md-6">
-                <h4 class="footer-head">Fruits</h4>
+                <h4 class="footer-head">Links</h4>
                 <div class="footer-link">
                     <ul class="ps-3 mb-0">
                         <li *ngFor="let link of footerlink1">
