--- a/src/app/pages/hospital-detail/hospital-detail.html
+++ b/src/app/pages/hospital-detail/hospital-detail.html
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="inner-baner-dtl position-relative text-center">
-                    <!-- <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[0].url"
-                        class="w-100 img-fluid rounded-5" [alt]="hospital.name" /> -->
-                    <img [src]="'assets/images/associate-hospital.png'" class="w-100 img-fluid rounded-5" />
+                    <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[0].url"
+                        class="w-100 img-fluid rounded-5 banner-img" [alt]="hospital.name" />
+                    <!-- <img [src]="'assets/images/associate-hospital.png'" class="w-100 img-fluid rounded-5" /> -->
                     <div class="inner-heading">
                         <h2>{{ hospital.name }}</h2>
                         <ul class="breadcumb d-flex justify-content-center align-items-center gap-3">
@@ -22,12 +22,13 @@
     </div>
 </section>
 
-<section class="hospital-detail" *ngIf="hospital">
+<section class="hospital-detail ptc-80" *ngIf="hospital">
     <div class="container">
-        <div class="row mb-4">
+        <div class="row">
             <div class="col-md-6">
                 <div class="detail-image">
-                    <img [src]="'assets/images/hospital-detail.png'" class="img-fluid w-100" />
+                    <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[1].url"
+                        class="img-fluid w-100" [alt]="hospital.name" />
                 </div>
             </div>
             <div class="col-md-6">
@@ -49,21 +50,21 @@
                     <div class="dtl-head">
                         <h2>Lorem ipsum is simply dummy text</h2>
                     </div>
-                    <p>Cras vel bibendum nisl. Sed tincidunt purus nec vehicula aliquet. Vestibulum gravida molestie
+                    <p class="mb-0">Cras vel bibendum nisl. Sed tincidunt purus nec vehicula aliquet. Vestibulum gravida molestie
                         lectus, ut facilisis nisl ultrices eu. Ut sed nunc quis metus egestas fringilla sed at arcu.
                         Aenean vel varius orci. Morbi sed augue at odio mattis vehicula. Quisque nisl dui, vehicula vel
                         lacinia congue, pellentesque eget dolor. Aliquam ullamcorper tempus risus ut luctus. Curabitur
                         nec nisi cursus, semper turpis in, bibendum risus. Aenean ac diam a nulla tincidunt lobortis a
                         eu erat. Nullam sit amet mauris vel urna ornare suscipit at ac metus. Maecenas hendrerit magna
                         efficitur felis ultrices, sit amet sollicitudin nisi porta. Curabitur in massa vel diam euismod
-                        vestibulum. Sed molestie a ex ut vulputate.</p>
+                        vestibulum.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="facilities" *ngIf="hospital">
+<section class="facilities ptc-60" *ngIf="hospital">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -73,7 +74,7 @@
             </div>
         </div>
         <div class="row" *ngIf="hospital?.facilities">
-            <div class="col-md-3" *ngFor="let facility of hospital.facilities.split(','); let i = index">
+            <div class="col-md-3" *ngFor="let facility of hospital.facilities.split('\n'); let i = index">
                 <div class="facility-item d-flex align-items-center justify-content-center">
                     <img [src]="facilityIcons[i] || 'assets/images/facilities/default.png'" alt="facility {{ i + 1 }}"
                         class="img-fluid" />
@@ -83,7 +84,7 @@
         </div>
     </div>
 </section>
-<section class="facilities" *ngIf="hospital">
+<section class="facilities ptc-60" *ngIf="hospital">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -95,8 +96,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div *ngIf="hospital?.features" class="dtl-features-list">
-                    <ul class="list-unstyled">
-                        <li *ngFor="let feature of hospital.features.split('\\n')">
+                    <ul class="list-unstyled mb-0">
+                        <li *ngFor="let feature of hospital.features.split('\n')">
                             <img [src]="featureIcon" alt="feature icon" />
                             <span>{{ feature.trim() }}</span>
                         </li>
@@ -106,14 +107,161 @@
         </div>
     </div>
 </section>
-<section class="dtl-center-image">
+<section class="dtl-center-image ptc-60" *ngIf="hospital">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-
+                <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[2].url"
+                        class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
             </div>
             <div class="col-md-6">
-
+                <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[3].url"
+                        class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
+            </div>
+        </div>
+    </div>
+</section>
+<section class="faq-main ptc-80">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="dtl-faq">
+                    <div class="faq-head">
+                        <p>Frequently Asked Questions</p>
+                        <h4>Helping you understand healthcare</h4>
+                    </div>
+                    <div class="accordion accordion-main" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne">Lorem Ipsum is simply dummy text of the printing</button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the
+                                        1500s, when an unknown printer took a galley of type and scrambled.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
+                                    Lorem Ipsum is simply dummy text of the printing
+                                </button>
+                            </h2>
+                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="mb-0">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and scrambled.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
+                                    Lorem Ipsum is simply dummy text of the printing
+                                </button>
+                            </h2>
+                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="mb-0">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and scrambled.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
+                                    Lorem Ipsum is simply dummy text of the printing
+                                </button>
+                            </h2>
+                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="mb-0">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and scrambled.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
+                                    Lorem Ipsum is simply dummy text of the printing
+                                </button>
+                            </h2>
+                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p class="mb-0">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and scrambled.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="detail-doctors">
+                    <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
+                        <h4>Top Doctors</h4>
+                        <a href="#">View All</a>
+                    </div>
+                    <div class="dtl-doctor-list d-flex align-items-center">
+                        <div class="dtl-doctor-img">
+                            <img [src]="'assets/images/dtl-doctor.png'" class="img-fluid">            
+                        </div>
+                        <div class="dtl-doctor-info">
+                            <p>Dr. Prof Raju Vaishya</p>
+                            <ul>
+                                <li>Orthopaedic Surgeon</li>
+                                <li>35 Years of Experience</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="dtl-doctor-list d-flex align-items-center">
+                        <div class="dtl-doctor-img">
+                            <img [src]="'assets/images/dtl-doctor.png'" class="img-fluid">            
+                        </div>
+                        <div class="dtl-doctor-info">
+                            <p>Dr. Prof Raju Vaishya</p>
+                            <ul>
+                                <li>Orthopaedic Surgeon</li>
+                                <li>35 Years of Experience</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="dtl-cta ptc-80">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="dtl-cta-main position-relative">
+                    <img [src]="'assets/images/dtl-cta.jpg'" class="img-fluid w-100 rounded-4">
+                    <div class="dtl-cta-action">
+                        <h2>Take the first step to <br> better health</h2>
+                        <a href="#" class="btn-default">Talk To Our Experts Now <i class="fa-solid fa-arrow-up"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
