--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -2,6 +2,10 @@
 {
     padding-top: 80px;
 }
+.ptc-60
+{
+    padding-top: 60px;
+}
 .mbc-40
 {
     margin-bottom: 40px;
@@ -41,6 +45,13 @@
     background-color: #F6FBFF;
     padding: 30px 50px;
     border-radius: 15px;
+}
+.inner-baner-dtl img.banner-img
+{
+    max-height: 390px;
+    object-fit: cover;
+    object-position: center;
+    min-height: 390px;
 }
 .banner-offer p
 {
@@ -392,6 +403,8 @@
     color: var(--primary-color);
     font-family: var(--primary-font);
     transition: all 0.5s;
+    border: none;
+    outline: none;
 }
 .read-more a.btn i
 {
@@ -428,4 +441,148 @@
 {
     gap: 3px;
     margin: 10px 0px;
+}
+.faq-head p
+{
+    margin-bottom: 6px;
+    color: var(--primary-color);
+}
+.faq-head h4
+{
+    font-size: 34px;
+    font-family: var(--primary-font);
+    color: var(--secondary-color);
+}
+.accordion-main h2 button
+{
+    color: var(--info-color);
+    font-family: 'Lexend-Regular';
+    border: none;
+    font-size: 18px;
+    padding: 15px 10px;
+    border-radius: 0px !important;
+    border-bottom: 1px solid #000;
+}
+.accordion-main h2 button:focus
+{
+    box-shadow: none;
+}
+.accordion-main .accordion-item
+{
+    border: none;
+    margin-bottom: 15px;
+}
+.accordion-main .accordion-body
+{
+    padding: 10px !important;
+    padding-bottom: 0px !important;
+}
+.accordion-main .accordion-button:not(.collapsed)
+{
+    color: var(--info-color);
+    background-color: transparent;
+}
+.accordion-main .accordion-body p
+{
+    color: var(--info-color);
+}
+.dtl-doctor-head h4
+{
+    font-size: 28px;
+    font-family: var(--primary-font);
+    color: var(--secondary-color);
+}
+.dtl-doctor-head a
+{
+    font-size: 18px;
+    text-decoration: underline;
+    color: var(--primary-color);
+}
+.dtl-doctor-info p
+{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 3px;
+    color: var(--secondary-color);
+}
+.dtl-doctor-info ul
+{
+    padding-left: 20px;
+    margin-bottom: 0px;
+}
+.dtl-doctor-info ul li
+{
+    font-size: 16px;
+    color: var(--info-color);
+}
+.dtl-doctor-info
+{
+    padding-left: 25px;
+}
+.dtl-doctor-img img
+{
+    max-width: 93px;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+.dtl-doctor-list
+{
+    padding: 25px 20px;
+    border-bottom: 1px solid #989898;
+}
+.dtl-doctor-head
+{
+    padding: 0px 20px;
+}
+.detail-doctors
+{
+    background-color: #F6FBFF;
+    padding: 30px 0px;
+    border-radius: 15px;
+    margin-left: 25px;
+}
+.detail-doctors .dtl-doctor-list:last-child
+{
+    padding-bottom: 0px;
+    border-bottom: none;
+}
+.dtl-cta-action
+{
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
+    bottom: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+}
+.dtl-cta-action h2
+{
+    color: #fff;
+    font-family: var(--primary-font);
+    font-size: 38px;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+.dtl-cta-action a.btn-default
+{
+    font-family: 'Lexend-Regular';
+    padding: 13px 30px;
+}
+.detail-info
+{
+    padding-top: 50px;
+}
+.dtl-features-list ul li:last-child
+{
+    margin-bottom: 0px !important;
+}
+.dtl-center-image img
+{
+    height: 300px;
+    object-fit: cover;
 }
