--- a/src/app/pages/associate-hospital/associate-hospital.html
+++ b/src/app/pages/associate-hospital/associate-hospital.html
@@ -52,12 +52,12 @@
                             <p><strong>Facilities:</strong> {{ h.facilities }}</p> -->
                         </div>
                         <div class="read-more">
-                            <!-- <a *ngIf="h.id" [attr.href]="'/hospital-detail/' + h.id" class="btn">
-                                More Detail <i class="fa fa-arrow-up"></i>
-                            </a> -->
-                            <a *ngIf="h.id" [attr.href]="'#/hospital-detail/' + h.id" class="btn">
+                            <a *ngIf="h.id" [attr.href]="'/hospital-detail/' + h.id" class="btn">
                                 More Detail <i class="fa fa-arrow-up"></i>
                             </a>
+                            <!-- <a *ngIf="h.id" [attr.href]="'#/hospital-detail/' + h.id" class="btn">
+                                More Detail <i class="fa fa-arrow-up"></i>
+                            </a> -->
                         </div>
 
                     </div>
